<!--
  ~ Copyright (c) MyScript. All rights reserved.
  -->

<resources>
    <string name="app_name">Interactive Math Pad</string>

    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_convert">Convert</string>
    <string name="menu_export">Export As</string>
    <string name="menu_export_latex">LaTeX</string>
    <string name="menu_export_math_ml">Math ML</string>

    <string name="footnote">All rights reserved. Powered by</string>
</resources>
